# decoder

./: .gitignore  Cargo.toml  README.md
_fixtures/: hello.asm
_fixtures/apk/: .gitignore
_fixtures/asm/: README.md  hello.asm
_fixtures/c/: README.md  hello  hello.c
_fixtures/java/: HelloWorld.java  README.md
_fixtures/java/hello/: classes.dex
_fixtures/rust/: hello
class/: Cargo.toml
dex/: Cargo.toml
elf/: Cargo.toml
elf/src/: main.rs
papk/: Cargo.toml
papk/src/: lib.rs  main.rs
pclass/: Cargo.toml
pclass/src/: lib.rs
pd8/: Cargo.toml
pd8/src/r8/: d8.rs  d8_builder.rs  d8_command.rs  d8_command_parser.rs  mod.rs
pd8/src/r8/dex/: application_reader.rs
pd8/src/r8/graph/: app_info.rs  dex_annotation_set.rs  dex_application.rs  dex_encoded_annotation.rs  dex_encoded_method.rs  dex_method.rs  dex_program_class.rs  dex_string.rs  dex_type_list.rs  dex_value.rs  lazy_loaded_dex_application.rs  method_access_flags.rs  method_collection.rs  mod.rs
pd8/src/r8/ir/: ir_converter.rs
pd8/src/r8/support/: class_file_consumer.rs
pd8/src/r8/utils/: android_app.rs  (+1 more)
pdex/: Cargo.toml
pdex/src/: lib.rs  main.rs
pdx/: Cargo.toml  README.md
pdx/src/: lib.rs
pdx/src/cf/: mod.rs
pdx/src/dx/: dex_option.rs  mod.rs
pelf/: Cargo.toml
pelf/src/: lib.rs  main.rs
poat/: Cargo.toml
poat/src/: lib.rs
pr8/: Cargo.toml  README.md
pr8/src/: lib.rs
pr8/src/r8/: d8.rs  d8_builder.rs  d8_command.rs  d8_command_parser.rs  mod.rs  r8.rs  support.rs
src/: highlight.rs  main.rs
src/cmd/: cmd_papk.rs  cmd_pclass.rs  cmd_unpack.rs  mod.rs
(+85 files in other folders)
