[package]
name = "decoder"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
syntect = "4.2"

[dependencies.papk]
path = "papk"

[dependencies.pclass]
path = "pclass"

[workspace]
members = [
    "pdex",
    "pelf",
    "poat",
    "pclass",
    "papk"
]
