[package]
name = "decoder"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
syntect = "4.2"
failure = "0.1.8"

dex = "0.4.0"
tempfile = "3.1.0"
memmap = "0.7.0"

[dependencies.papk]
path = "papk"

[dependencies.pclass]
path = "pclass"

[dependencies.pdex]
path = "pdex"

[workspace]
members = [
    "pdex",
    "pelf",
    "poat",
    "pclass",
    "papk"
]
